--- a/SERVER2/package.json
+++ b/SERVER2/package.json
@@ -1,25 +1,18 @@
 {
-  "name": "server",
+  "name": "server2",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.5.0",
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.5"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
   }
 }
