--- a/SERVER2/package.json
+++ b/SERVER2/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev" : "nodemon server.js"
+    
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +19,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.4.5"
+    "mongoose": "^7.4.5",
+    "nodemon": "^3.0.1"
   }
 }
